Fix new headers on mobile.

--- a/css/iphone.css
+++ b/css/iphone.css
@@ -16,14 +16,21 @@
     color: #bebebe;
     display: block; }
 
-.content {
+.header {
   margin: 0;
   padding: 15px 25px 5px 25px;
   width: inherit; }
-  .content h1 {
+  .header h1 {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin: 0 0 5px 0; }
+
+.content {
+  margin: 0;
+  padding: 5px 25px;
+  width: inherit; }
+  .content h1 {
     margin: 0 0 5px 0; }
 
 div.polaroids {
